# JiTeX

./: .gitignore  .gitmodules  CMakeLists.txt  Language.g4
include/: jitex.h
src/: jitex.cpp
tests/: CMakeLists.txt  parser_test.cpp  simple_expression.cpp
